# aoc-bencher

./: .dockerignore  .gitignore  Cargo.toml  config.json.example  docker-compose.yml
adapter-rust/: Cargo.toml
adapter-rust/src/: main.rs
bencher/: Cargo.toml
bencher/src/: lib.rs
server/: .env.example  .gitignore  Cargo.toml  Dockerfile  config.ron.example  sqlx-data.json
server/migrations/: 20211205074759_create_benchmarks_table.down.sql  20211205074759_create_benchmarks_table.up.sql
server/src/: http.rs  main.rs  models.rs  repo.rs  runner.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.rs
